Added images to catalogItem editor
